# llvm-project

./: .gitignore
clang/examples/: CMakeLists.txt
clang/examples/HCMCounter/: CMakeLists.txt  HCMCounter.cpp
clang/examples/HCMCounter/test/: comment.c  diff  goto.c  switch.c  test.c  test2.c
clang/examples/HCMCounter/tools/: HCMCompare.py  HCMRun  README  collectAllWdiff.sh  diff_extract.py  get-nooffload.sh  mywdiff.sh  wdiff.py
clang/examples/OpenMPRewriter/: OpenMPRewrite.cpp
clang/examples/OpenMPRewriter/test/: README
clang/lib/CodeGen/: BackendUtil.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h
clang/lib/Driver/: Driver.cpp
clang/lib/Driver/ToolChains/: Cuda.cpp
clang/lib/Headers/: __clang_cuda_device_functions.h
clang/lib/Sema/: SemaOpenMP.cpp
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/include/llvm/Demangle/: MicrosoftDemangle.h  MicrosoftDemangleNodes.h
llvm/include/llvm/Transforms/: IPO.h
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/AddrSpaceNvptx/: AddrSpaceNvptx.cpp  CMakeLists.txt
llvm/lib/Transforms/IPO/: CMakeLists.txt  (+1 more)
openmp/: CMakeLists.txt
openmp/libomptarget/include/: omptarget.h  omptargetplugin.h
openmp/libomptarget/plugins/: exports
openmp/libomptarget/src/: CMakeLists.txt  at.cpp  at.h  device.cpp  device.h  exports  interface.cpp  omptarget.cpp  perf.cpp  perf.h  private.h  region.cpp  rtl.cpp  rtl.h  rttype.cpp  rttype.h  segment.cpp
openmp/libomptarget/src/mymalloc/: Makefile  mem_layout.cpp  mmap_mgr.cpp  mmprivate.h  mymalloc.cpp  mymalloc.h  uvm_malloc.cu  uvm_malloc_test.cu
(+5 files in other folders)
